[gd_scene load_steps=22 format=3 uid="uid://ca26f2u38jrcx"]

[ext_resource type="Script" uid="uid://cjf860oe3uad4" path="res://chao.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://0symwfw5tox4" path="res://imgs/sprites/chao_idle.png" id="2"]
[ext_resource type="Texture2D" uid="uid://jh0wlxraeekv" path="res://imgs/sprites/chao_happy.png" id="4_7g0ps"]
[ext_resource type="Texture2D" uid="uid://c057vmc8amrtt" path="res://imgs/sprites/chao_sad.png" id="6_svemm"]
[ext_resource type="Texture2D" uid="uid://dmvkyu5it4wps" path="res://imgs/sprites/chao_left.png" id="7_egtej"]
[ext_resource type="Texture2D" uid="uid://bgto0d8p14if8" path="res://imgs/sprites/chao_right.png" id="8_hfr5q"]
[ext_resource type="Texture2D" uid="uid://bagq8aajbdd72" path="res://imgs/sprites/chao_down.png" id="9_ae121"]
[ext_resource type="Texture2D" uid="uid://dkvh8u7sag8" path="res://imgs/sprites/chao_up.png" id="9_allse"]
[ext_resource type="Texture2D" uid="uid://diyqvqteuwkoc" path="res://imgs/sprites/chao_run.png" id="10_ae121"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vltbn"]
radius = 30.0

[sub_resource type="Animation" id="Animation_svemm"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_x7h8y"]
resource_name = "down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("9_ae121"), ExtResource("9_ae121")]
}

[sub_resource type="Animation" id="Animation_fxxmt"]
resource_name = "happy"
length = 0.0333333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_7g0ps")]
}

[sub_resource type="Animation" id="Animation_vltbn"]
resource_name = "idle"
length = 0.0333333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2")]
}

[sub_resource type="Animation" id="Animation_hfr5q"]
resource_name = "left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("7_egtej"), ExtResource("7_egtej")]
}

[sub_resource type="Animation" id="Animation_allse"]
resource_name = "right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("8_hfr5q"), ExtResource("8_hfr5q")]
}

[sub_resource type="Animation" id="Animation_a3l5d"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("10_ae121"), ExtResource("10_ae121")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.266667, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.151844, -0.179769, 0.349066]
}

[sub_resource type="Animation" id="Animation_7g0ps"]
resource_name = "sad"
length = 0.0333333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_svemm")]
}

[sub_resource type="Animation" id="Animation_ae121"]
resource_name = "up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("9_allse"), ExtResource("9_allse")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_egtej"]
_data = {
&"RESET": SubResource("Animation_svemm"),
&"down": SubResource("Animation_x7h8y"),
&"happy": SubResource("Animation_fxxmt"),
&"idle": SubResource("Animation_vltbn"),
&"left": SubResource("Animation_hfr5q"),
&"right": SubResource("Animation_allse"),
&"run": SubResource("Animation_a3l5d"),
&"sad": SubResource("Animation_7g0ps"),
&"up": SubResource("Animation_ae121")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_allse"]
radius = 1000.0

[node name="Chao" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vltbn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_egtej")
}
autoplay = "idle"

[node name="BallDetectionArea" type="Area2D" parent="."]
light_mask = 3
visibility_layer = 0
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallDetectionArea"]
shape = SubResource("CircleShape2D_allse")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="area_entered" from="Area2D" to="." method="_on_ball_detection_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_ball_detection_area_exited"]
